# voice-prices

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  uprev.sh
.github/ISSUE_TEMPLATE/: add-provider.yml
.github/workflows/: ci.yml  pages.yml  pricing-freshness.yml
docs/: contributing-a-provider.md
docs/templates/: provider-llm.yml  provider-stt.yml  provider-tts.yml
prices/: README.md  data.json  data.schema.json  data_slim.json  data_slim.schema.json  pyproject.toml
prices/providers/: .schema.json  assemblyai.yml  cartesia.yml  deepgram.yml  elevenlabs.yml  groq.yml  livekit.yml  livekit_scale.yml  openai.yml
prices/sources/: livekit_pricing.json
prices/src/prices/: __main__.py  build.py  build_site.py  livekit_gen.py  package_data.py  prices_types.py
prices/src/prices/freshness/: __init__.py  diff.py  fetch.py  models.py  report.py  run.py  select.py
prices/src/prices/templates/: site.html
tests/: cli_missing_dependency_import.py  test_build_site.py  test_cli.py  test_custom_prices.py  test_end_to_end.py  test_extract_usage.py  test_freshness.py  test_lifecycle.py  test_livekit.py  test_model_matching.py  test_package_schema.py  test_price_breakdown_contract.py  test_price_calc.py  test_price_regressions.py  test_provider_matching.py  test_schema_validation.py  test_tiered_pricing.py  test_update_prices.py
tests/dataset/: README.md  extract_usages.py
